# Topic-Mapped-Text-Embeddings-for-Effective-Retrieval

./: .env.example  README.md  pyproject.toml  requirements.txt  run_app.py
backend/: main.py
dataset/: evaluation_questionnaire.py
evaluation_dataset/: evaluation_questionnaire.json
evaluation_results/: accuracy.txt
frontend/src/: App.svelte  app.css
frontend/src/lib/: Results.svelte  Sidebar.svelte
image_collection/: download_images.py  image_picker_streamlit_ui.py  serp_images.py
preprocess/bge/: bge_embedding.py
preprocess/bge/text_embedding/: embedding_errors.json  text_index_structure_1.faiss  text_index_structure_2.faiss  text_index_structure_3.faiss  text_index_structure_4.faiss  text_index_structure_5.faiss  text_metadata_structure_2.json
preprocess/bm25/: bm_25_tokenizer.py
preprocess/bm25/pickle_files/with_stopwords/: with_stopwords_structure_3.pkl
preprocess/bm25/pickle_files/without_stopwords/: without_stopwords.pkl  without_stopwords_structure_2.pkl  without_stopwords_structure_3.pkl
preprocess/clip/: clip_embedding.py
preprocess/clip/image_embedding/: clip_index.faiss  clip_metadata.json
preprocess/dataset/: image_metadata.json
preprocess/tfidf/: tfidf_tokenizer.py
preprocess/tfidf/pickle_files/tfidf_structure_1.pkl/: tfidf_vectorizer.joblib
preprocess/tfidf/pickle_files/tfidf_structure_2.pkl/: tfidf_vectorizer.joblib
preprocess/tfidf/pickle_files/tfidf_structure_3.pkl/: tfidf_vectorizer.joblib  tfidf_vectorizer.pkl
retreivers/: __init__.py  bge_retreiver.py  bm25_retreiver.py  clip_retreiver.py  tfidf_retreiver.py
(+2 files in other folders)
